static/css/style.css
/*
font-family: 'Playfair Display', serif; Website Font
font-family: 'Montserrat', sans-serif; Spotify Font
*/

/* Layout */
html * {
    font-family: 'Playfair Display', serif;
    font-weight: 700;
    color: whitesmoke;
}



.mainBody {
    background-image: url("/static/images/orch2.jpg");
    min-height: 100vh;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

}

.pageBody {
    padding: 100px 0;
}

.navBar,
.footer {
    background: linear-gradient(to right, #D652F0, #52C0F0, #5DF052, #52C0F0, #D652F0);
    height: 80px;
    position: fixed;
    left: 0;
    z-index: 10;
}

.navBar {
    top: 0;
    padding: 10px;
    font-size: 30px;
}

.footer {
    bottom: 0;
    width: 100%;
    padding: 15px;
}

.navBar a,
.navBar ul li,
.navBar ul li a,
.footer p {
    color: black;
}

/* Cards modals and forms */

.textInputCard,
.workInputCard {
    background-color: rgba(10, 9, 10, 0.8);
    margin: 20px 0;
    padding: 10px;
    border-radius: 20px;
}

.modal {
    background-color: rgba(10, 9, 10, 0.8);
    margin: 20px 0;
    padding: 10px;
    border-radius: 20px;
    line-height: 35px;
    font-weight: 600;
}

.textInputCard h3,
.textInputCard h4,
.textInputCard h5,
.textInputCard h5 a u,
.carousel-item h2 {
    line-height: 35px;
    font-weight: 600;
}


.textInputCard label,
.textInputCard .input-field,
.textInputCard i,
.workInputCard .input-field {
    font-size: 30px;
    font-weight: 600;
    margin: 5px;
}


.searchBar,
.flashMessages h5 {
    background-color: rgba(10, 9, 10, 0.8);
    margin-top: 20px;
    padding: 10px;
    border-radius: 20px;
    text-align: center;
    font-weight: 600;
}

.carousel {
    margin-top: 20px;
}

.carousel.carousel-slider .carousel-item h2 {
    font-size: 20px;
    margin: 10px;
}

.row.slider-center {
    position: absolute;
    top: 50%;
    width: 100%;
}


/* Buttons and images */


.spotifyButton {
    border-radius: 30px;
    border: 1px solid black;
    color: black;
    padding: 3px 10px;
    background-color: #1DB954;
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
}

.spotifyButton i {
    color: black;
}


.regularButton {
    border-radius: 30px;
    border: 1px solid black;
    background: whitesmoke;
    color: black;
    font-weight: 700;

}

.addButton {
    border-radius: 30px;
    border: 1px solid black;
    color: black;
    background-color: #52C0F0;
    box-shadow: black;
    margin: 15px;
}

.addButton:hover,
.regularButton:hover {
    background: #D652F0;
}

.regularButton:focus {
    background: whitesmoke
}


.navButtons i {
    font-size: 30px;
    margin: 0 10px;
}

.navButtons i:hover {
    color: #D652F0;
}

.imageContainer img {
    max-height: 30%;
    max-width: 30%;
    margin: 20px;
}

@media only screen and (min-width: 576px) {
    .imageContainer img {
        max-height: 15%;
        max-width: 15%;
        margin: 20px;
    }
}


.editDeleteButtons {
    margin: 20px;
}

.dropdown-content {
    background-color: whitesmoke;
    border-radius: 20px;
}

.dropdown-content li a {
    color: black;
}

